# wavesuit

./: .gitignore  Cargo.toml  LICENSE  README.md  coolparams.json  params.json  raindrops.json
base/: Cargo.toml
base/src/: color.rs  lib.rs  painter_params.rs
cli/: angular.json  deploy.sh  package.json
cli/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
cli/src/app/controls/color-picker/: color-picker.component.css  color-picker.component.html  color-picker.component.ts
cli/src/app/controls/wave-slider/: wave-slider.component.html  wave-slider.component.ts
cli/src/environments/: environment.prod.ts  environment.ts
src/: display.rs  main.rs  painter.rs
src/display/: blinkt_display.rs  emulator.rs  fake_display.rs  mod.rs
src/runner/: default_runner.rs  emulator.rs  mod.rs
