[package]
name = "base"
version = "0.1.0"
authors = ["Benjamin Shaya <ben@welkinhealth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"
crossbeam-channel = "*"
